fix: scrollbar invisible

--- a/src/renderer/main.scss
+++ b/src/renderer/main.scss
@@ -114,7 +114,7 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 10px;
   height: 10px;
 }
 ::-webkit-scrollbar-track {
@@ -126,13 +126,14 @@ body {
   background-color: transparent;
 }
 ::-webkit-scrollbar-thumb {
-  background-color: var(--aya-color-fill-tertiary);
+  background-color: var(--aya-color-border);
+  transition: background-color 0.2s;
   background-clip: padding-box;
   border: solid transparent;
   border-radius: 10px;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background-color: var(--aya-color-fill-secondary);
+  background-color: var(--aya-color-primary);
 }
 
 .button {
